--- a/Extentions/MvcControls/Home-MainEdit.html
+++ b/Extentions/MvcControls/Home-MainEdit.html
@@ -7,32 +7,32 @@
 		<meta name="viewport" content="width=initial-scale=0.7">
 			<meta charset="UTF-8" />
 
-			<link href="Content/Telerik/kendo.dataviz.min.css" rel="stylesheet" type="text/css" />
-			<link href="Content/Telerik/kendo.dataviz.fiori.min.css" rel="stylesheet" type="text/css" />
-			<link href="Content/Telerik/kendo.mobile.fiori.min.css" rel="stylesheet" type="text/css" />
-			<link href="Content/Telerik/kendo.common.min.css" rel="stylesheet" type="text/css" />
-			<link href="Content/Telerik/kendo.blueopal.min.css" rel="stylesheet" type="text/css" />
+			<link href="Result/Content/Telerik/kendo.dataviz.min.css" rel="stylesheet" type="text/css" />
+			<link href="Result/Content/Telerik/kendo.dataviz.fiori.min.css" rel="stylesheet" type="text/css" />
+			<link href="Result/Content/Telerik/kendo.mobile.fiori.min.css" rel="stylesheet" type="text/css" />
+			<link href="Result/Content/Telerik/kendo.common.min.css" rel="stylesheet" type="text/css" />
+			<link href="Result/Content/Telerik/kendo.blueopal.min.css" rel="stylesheet" type="text/css" />
 
-			<link href="Content/Site.css" rel="stylesheet"/>
-			<link href="Content/Styles/Base/base.css" rel="stylesheet"/>
-			<link href="Content/Styles/Layouts/header.css" rel="stylesheet"/>
-			<link href="Content/Styles/Layouts/container.css" rel="stylesheet"/>
-			<link href="Content/Styles/Layouts/tabs.css" rel="stylesheet"/>
-			<link href="Content/Styles/Modules/modules.css" rel="stylesheet"/>
-			<link href="Content/Styles/States/states.css" rel="stylesheet"/>
-			<link href="Content/xonomy/xonomy.css" rel="stylesheet"/>
-
-
-			<link href="Content/Telerik/font-awesome.min.css" rel="stylesheet" type="text/css">
-				<link href="Content/Captcha.css" rel="stylesheet" type="text/css" />
+			<link href="Result/Content/Site.css" rel="stylesheet"/>
+			<link href="Result/Content/Styles/Base/base.css" rel="stylesheet"/>
+			<link href="Result/Content/Styles/Layouts/header.css" rel="stylesheet"/>
+			<link href="Result/Content/Styles/Layouts/container.css" rel="stylesheet"/>
+			<link href="Result/Content/Styles/Layouts/tabs.css" rel="stylesheet"/>
+			<link href="Result/Content/Styles/Modules/modules.css" rel="stylesheet"/>
+			<link href="Result/Content/Styles/States/states.css" rel="stylesheet"/>
+			<link href="Result/Content/xonomy/xonomy.css" rel="stylesheet"/>
 
 
-				<script src="/Scripts/Telerik/jquery.min.js"></script>
-				<script src="/Scripts/Telerik/jszip.min.js"></script>
-				<script src="/Scripts/Telerik/kendo.all.min.js"></script>
-				<script src="/Scripts/Telerik/kendo.aspnetmvc.min.js"></script>
-				<script src="/Scripts/Telerik/cultures/kendo.culture.ru-RU.min.js"></script>
-				<script src="/Scripts/Telerik/messages/kendo.messages.ru-RU.min.js"></script>
+			<link href="Result/Content/Telerik/font-awesome.min.css" rel="stylesheet" type="text/css">
+				<link href="Result/Content/Captcha.css" rel="stylesheet" type="text/css" />
+
+
+				<script src="Result/Scripts/Telerik/jquery.min.js"></script>
+				<script src="Result/Scripts/Telerik/jszip.min.js"></script>
+				<script src="Result/Scripts/Telerik/kendo.all.min.js"></script>
+				<script src="Result/Scripts/Telerik/kendo.aspnetmvc.min.js"></script>
+				<script src="Result/Scripts/Telerik/cultures/kendo.culture.ru-RU.min.js"></script>
+				<script src="Result/Scripts/Telerik/messages/kendo.messages.ru-RU.min.js"></script>
 
 
 			</head>
