--- a/Extentions/MvcControls/Home-MainEdit.html
+++ b/Extentions/MvcControls/Home-MainEdit.html
@@ -299,6 +299,52 @@
 									</table>
 								</td>
 							</tr>
+							<tr field-title="Покупатель">
+								<td class="ctrl-label">
+									<label class="label" for="check_5e8c6efd-853f-499d-8879-6dc29b2c6a8b" id="label_5e8c6efd-853f-499d-8879-6dc29b2c6a8b" title="Покупатель [DEAL_EXT.BUYER_ID]">Покупатель</label>
+								</td>
+								<td class="ctrl-value Large">
+									<div class="Large">
+<span  class='ctrl-selector flexbox-horizontal k-textbox is-width-fulled' >
+	<span class='ctrl-selector-icon-search k-icon k-i-search k-link' 
+		  id='search_207ca308-2697-4ad6-82fb-c6e4a02124bc' 
+		  />
+	<input class='ctrl-selector-input flexbox-item-full' 
+		   type='text'  
+		   id='caption_207ca308-2697-4ad6-82fb-c6e4a02124bc' 
+		   value='' 
+		   readonly='readonly' 
+		   caption='' />
+	<!--<input class='ctrl-input' name='DEAL_EXT.BUYER_ID.20.Selector.Editor.0.3.1' id='val_207ca308-2697-4ad6-82fb-c6e4a02124bc' parent_guid='71110e48-9def-4816-a8c2-0a7bbb94fba4' value='%3Croot%3E%20%20%20%20%3Cid%3E%3C%2Fid%3E%20%20%20%20%3Ctext%3E%3C%2Ftext%3E%3C%2Froot%3E' type='hidden' valid='val_207ca308-2697-4ad6-82fb-c6e4a02124bc' parent_guid='71110e48-9def-4816-a8c2-0a7bbb94fba4' page_guid='207ca308-2697-4ad6-82fb-c6e4a02124bc' uri_path='110_3216_0_12_121_0_2_0_2_0_0;102_3217_11_20_0_127_1_0_305_602_0_501_0;' nom='3' name='DEAL_EXT.BUYER_ID.20.Selector.Editor.0.3.1' controltype='Selector' isrequired='true' title='Покупатель' isrequired='true' title='Покупатель' />-->
+	<!--<span class='ctrl-selector-icon-close k-icon k-i-close k-link is-align-right' onclick='selector_Clear("207ca308-2697-4ad6-82fb-c6e4a02124bc");'></span>-->
+</span>
+									</div>
+									<div id='empty_div_207ca308-2697-4ad6-82fb-c6e4a02124bc' class='ctrl-empty-div'></div>
+								</td>
+							</tr>
+							<tr field-title="Покупатель">
+								<td class="ctrl-label">
+									<label class="label" for="check_5e8c6efd-853f-499d-8879-6dc29b2c6a8b" id="label_5e8c6efd-853f-499d-8879-6dc29b2c6a8b" title="Покупатель [DEAL_EXT.BUYER_ID]">Покупатель</label>
+								</td>
+								<td class="ctrl-value Large">
+									<div class="Large">
+<span class="ctrl-selector flexbox-horizontal k-textbox is-width-fulled" >
+	<span class="ctrl-selector-icon-search k-icon k-i-search k-link"
+		  id="search_1ba66bc6-6003-47ad-bc2d-e3d743b4567d"
+		  > </span>
+	<input class="ctrl-selector-input flexbox-item-full" 
+		   id="caption_1ba66bc6-6003-47ad-bc2d-e3d743b4567d" 
+		   value="" 
+		   readonly="readonly" 
+		   type="text" 
+		   caption="" />
+	<!--<input class="ctrl-input" name="DEAL_EXT.SELLER_ID.7.Selector.Editor.0.1.1" id="val_1ba66bc6-6003-47ad-bc2d-e3d743b4567d" parent_guid="9296a16a-0acd-4b64-be1c-eb886f5d3550" value="%3Croot%3E%0D%0A%20%20%3Cid%3E7%3C%2Fid%3E%0D%0A%20%20%3Ctext%3E7%3C%2Ftext%3E%0D%0A%3C%2Froot%3E" type="hidden" page_guid="1ba66bc6-6003-47ad-bc2d-e3d743b4567d" uri_path="110_3216_0_12_121_0_2_0_2_0_0;102_3217_11_7_0_127_1_0_859_602_0_501_0;" nom="1" controltype="Selector" selector_id="7" isrequired="true" title="Продавец" Changed="Changed" />-->
+	<!--<span class="ctrl-selector-icon-close k-icon k-i-close k-link" onclick="selector_Clear(&quot;1ba66bc6-6003-47ad-bc2d-e3d743b4567d&quot;);" />-->
+</span>
+									</div>
+									<div id='empty_div_207ca308-2697-4ad6-82fb-c6e4a02124bc' class='ctrl-empty-div'></div>
+								</td>
+							</tr>
 						</table>
 					</div>
 				</li>
